EPMRPP-103275 || Footer links. Fix save button alignment

--- a/app/src/pages/admin/serverSettingsPage/serverSettingsTabs/linksAndBrandingTab/addLinkForm/addLinkForm.scss
+++ b/app/src/pages/admin/serverSettingsPage/serverSettingsTabs/linksAndBrandingTab/addLinkForm/addLinkForm.scss
@@ -65,7 +65,8 @@
 
     .cancel-button,
     .submit-button {
-      width: 90px;
+      width: auto;
+      min-width: 90px;
       font-family: $FONT-REGULAR;
       font-size: 13px;
     }
